care/force-app/main/default/objects/Sterling_Country_Setting__mdt/Sterling_Country_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This object stores country specific settings for each Sterling server..  This includes login &amp; registration URLs used in the Help Center.</description>
    <label>Sterling Country Setting</label>
    <pluralLabel>Sterling Country Settings</pluralLabel>
</CustomObject>