care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Apply_to_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_Jobs__c</fullName>
    <label>Apply to Jobs</label>
    <type>Url</type>
</CustomField>