care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <inlineHelpText>Sterling Country Code.</inlineHelpText>
    <label>Country Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>