care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Http_Request_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Http_Request_Time_Out__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>This is introduced to define the Http Request Time Out value in milliseconds. The default value is 10000.</description>
    <inlineHelpText>Please enter server expected response time in milli seconds. default value is 10000.</inlineHelpText>
    <label>Http Request Time Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>