care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Join_Now__c.field-meta.xml
<CustomField>
    <fullName>Join_Now__c</fullName>
    <label>Join Now</label>
    <type>Url</type>
</CustomField>