care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>