care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <inlineHelpText>The URL of the Login Page for the given locale.</inlineHelpText>
    <label>Login</label>
    <type>Url</type>
</CustomField>