care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Production_URL_Root__c.field-meta.xml
<CustomField>
    <fullName>Production_URL_Root__c</fullName>
    <description>The root of the URL to hit the production servers for a given country.</description>
    <label>Production URL Root</label>
    <length>100</length>
    <type>Text</type>
</CustomField>