care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/QA_Email__c.field-meta.xml
<CustomField>
    <fullName>QA_Email__c</fullName>
    <label>QA Email</label>
    <type>Email</type>
</CustomField>