care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Staging_URL_Root__c.field-meta.xml
<CustomField>
    <fullName>Staging_URL_Root__c</fullName>
    <label>Staging URL Root</label>
    <length>100</length>
    <type>Text</type>
</CustomField>