care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Upgrade__c</fullName>
    <label>Upgrade</label>
    <type>Url</type>
</CustomField>