care/force-app/main/default/objects/Sterling_Country_Setting__mdt/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>The user names to access the staging server.</description>
    <label>User Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>