care/force-app/main/default/objects/Sterling_Country_Setting__mdt/listViews/All_Sterling_Country_Settings.listView-meta.xml
<ListView>
    <fullName>All_Sterling_Country_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Case_Origin__c</columns>
    <columns>Locale__c</columns>
    <columns>Language__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Production_URL_Root__c</columns>
    <columns>Staging_URL_Root__c</columns>
    <columns>User_Name__c</columns>
    <columns>QA_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sterling Country Settings</label>
    <language>en_US</language>
</ListView>